# OSkhQuant

./: .gitattributes  .gitignore  ARCHITECTURE.md  README.md  khFrame.py  khTrade.py  log.md  netlify.toml  requirements-gui.txt  requirements.txt  version.py
api/: .env.example  README.md  __init__.py  auth.py  backtest.py  celery_app.py  db.py  history.py  main.py  models.py  netlify_handler.py  notifications.py  pyproject.toml  realtime.py  repositories.py  requirements.txt  scheduler.py  schemas.py  storage.py  task_tracking.py  tasks.py  trade.py
api/app/: __init__.py  config.py  main.py
api/app/models/: __init__.py
api/app/routers/: __init__.py  health.py  risk.py  trade.py
api/app/services/: __init__.py
backend/: .env.example  README.md  celery_worker.py  requirements.txt
backend/app/: __init__.py  celery_app.py  main.py
docs/: architecture.md  environment-and-storage.md
frontend/: .env.example  README.md  index.html  netlify.toml  next.config.js  package.json  vite.config.ts
frontend/components/: BacktestForm.tsx  Layout.tsx  StrategyList.tsx
frontend/pages/: _app.tsx  index.tsx
frontend/src/: App.tsx  env.d.ts  main.tsx  routes.tsx  styles.css  version.ts
frontend/styles/: theme.ts
models/: README.md  __init__.py  export_schema.py  risk.py  trade.py
models/schemas/: trade.json
services/: __init__.py  quant_import.py  risk.py  trade.py
web/: .env.example  README.md  index.html  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
web-app/: README.md  index.html  package.json  tsconfig.app.json  vite.config.ts
(+99 files in other folders)
